Key de language

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
 
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
 
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
 
 		<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 		<meta name="viewport" content="width=device-width" />
