--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>{{ application_name }}</title>
+		<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+		<meta name="viewport" content="width=device-width" />
+		<meta name="description" content="{{ description }}" />
+		<meta property="og:title" content="{{ application_name }}" />
+		<meta property="og:description" content="{{ description }}" />
+		<meta property="og:image" content="{{ image }}" />
+		<meta property="fb:app_id" content="{{ facebookId }}" />
 
+		<title>{{ application_name }}</title>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=<%=htmlWebpackPlugin.options.metadata.google_analytics_key%>"></script>
 		<script>
@@ -14,12 +21,10 @@
 			gtag('config', '<%=htmlWebpackPlugin.options.metadata.google_analytics_key%>');
 		</script>
 
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
 
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
-
-		<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-		<meta name="viewport" content="width=device-width" />
+		
 		<!-- Bootstrap Core CSS -->
 		<link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Animation library for notifications   -->
@@ -52,12 +57,13 @@
 		<script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-      var addthis_config = {
-        ui_language: "es"
-      };
-			window._urq = window._urq || [];
-			window._urq.push(['initSite', 'c4933d4c-4ea4-4b9b-b3cd-2647bc9b6b7a']);
-		</script>
+		var defaultTitle = '{{ application_name | escape('js') }}';
+		var addthis_config = {
+			ui_language: "es"
+		};
+		window._urq = window._urq || [];
+		window._urq.push(['initSite', 'c4933d4c-4ea4-4b9b-b3cd-2647bc9b6b7a']);
+	</script>
 
 	</body>
 </html>
