--- a/frontend/backoffice.html
+++ b/frontend/backoffice.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&language=es-419key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
 
 	<link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
 
