--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
 		<link href="/static/vendor/paper-dashboard/css/paper-dashboard.css" rel="stylesheet" />
 
 		<!-- Custom Fonts -->
-		<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+		<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.12.0/css/all.css" crossorigin="anonymous">
 
 		<link href="/static/vendor/paper-dashboard/css/themify-icons.css" rel="stylesheet">
 		<link href='//fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
