Upgrade version GoogleMapsApi

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
 
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
 
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.37&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
+		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v={{ google_maps_version}}&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
 		
 		<!-- Bootstrap Core CSS -->
 		<link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
