--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
 			<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body>
+	<body id="dbody">
 		<div id="wrapper"></div>
 		<!-- built files will be auto injected -->
 
