mejoras en el destacado de los resultados de búsqueda y la interacción del panel izquierdo y el mapa. soporte leaflet para tipo de mapa, selección de clipping y capas de polígonos y códigos.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,8 +23,9 @@
 
 		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
 
+		<!-- Google maps -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v={{ google_maps_version}}&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
-		
+
 		<!-- Bootstrap Core CSS -->
 		<link href="/static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<!-- Animation library for notifications   -->
@@ -37,6 +38,7 @@
 
 		<link href="/static/vendor/paper-dashboard/css/themify-icons.css" rel="stylesheet">
 		<link href='//fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
+
 		<link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
