--- a/frontend/backoffice.html
+++ b/frontend/backoffice.html
@@ -12,9 +12,13 @@
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
 	<% if (htmlWebpackPlugin.options.metadata.maps_api == 'google' ||
 					htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
-		<!--{% if (maps_api == 'google') %}-->
+		<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
+			{% if (maps_api == 'google') %}
+		<% } %>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v={{ google_maps_version}}&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
-		<!--{% endif %}-->
+		<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
+			{% endif %}
+		<% } %>
 	<% } %>
 
 	<link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
