- fixes a animaciones de menú. - menú desplegable de ayuda.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
 		gtag('js', new Date());
 		gtag('config', '<%=htmlWebpackPlugin.options.metadata.google_analytics_key%>');
 	</script>
-	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=<%=htmlWebpackPlugin.options.metadata.add_this_key%>"></script>
+	<script type="text/javascript" src="//static.addtoany.com/menu/page.js"></script>
 	<% if (htmlWebpackPlugin.options.metadata.maps_api == 'google' ||
 					htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
 		<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
