fixes window.title, transiciones en login, combo de georreferenciar por código; coloreo suavizado para sin cambios; evita recargar cuando se cliquea en etiquetas; mejora en cacheo local

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,8 @@
 		<script src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
-		var defaultTitle = '{{ application_name | escape("js") }}';
+			var defaultTitle = '{{ application_name | escape("js") }}';
+			window.DefaultTitle = defaultTitle;
 		var addthis_config = {
 			ui_language: "es"
 		};
