edición de metadatos desde admin fix bajo translante

--- a/frontend/admins.html
+++ b/frontend/admins.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="es">
   <title>Poblaciones - Administración</title>
 
   <link rel="stylesheet" type="text/css" href="/static/styles/jqx.base.css" />
@@ -11,9 +13,9 @@
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
 
-	<link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
+  <link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
 
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
   <div id="wrapper"></div>
