--- a/frontend/backoffice.html
+++ b/frontend/backoffice.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Poblaciones - Administración</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="google" content="notranslate">
+	<meta http-equiv="Content-Language" content="es">
+	<title>Poblaciones - Administración</title>
 
-  <link rel="stylesheet" type="text/css" href="/static/styles/jqx.base.css" />
+	<link rel="stylesheet" type="text/css" href="/static/styles/jqx.base.css" />
 
-  <script type="text/javascript" src="/static/vendor/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/vendor/jquery/jquery.min.js"></script>
 
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons">
 	<% if (htmlWebpackPlugin.options.metadata.maps_api == 'google' ||
-					htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
-		<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
-			{% if (maps_api == 'google') %}
-		<% } %>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v={{ google_maps_version}}&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
-		<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
-			{% endif %}
-		<% } %>
+	htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
+	<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
+	{% if (maps_api == 'google') %}
+	<% } %>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v={{ google_maps_version}}&language=es-419&key=<%=htmlWebpackPlugin.options.metadata.google_maps_key%>&libraries=drawing"></script>
+	<% if (htmlWebpackPlugin.options.metadata.maps_api == 'all') { %>
+	{% endif %}
+	<% } %>
 	<% } %>
 
 	<link rel="stylesheet" type="text/css" href="/static/vendor/flaticon/flaticon.css">
